--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
         <!-- mindset section -->
 
-        <section>
-            <div class="mindset-container">
+        <section class="mindset-container">
+            <div>
                 <div class="mindset">
                     <h3 class="mindset-title">Always keep a positive mindset.</h3>
                     <button class="button-2">Call Now</button>
