--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                         <li>Participating Olympiad</li>
                     </ul>
                 </div>
-                <img id="image-1" src="/images/section.png" alt="" height="600" width="600">
+                <img id="image-1" src="./images/section.png" alt="" height="600" width="600">
             </div>
         </section>
 
 <!-- My failers section -->
         <section>
             <div class="my-failer-container">
-                <img id="image-2" src="/images/person.png" alt="" height="" width="">
+                <img id="image-2" src="./images/person.png" alt="" height="" width="">
                 <div class="my-failer">
                     <h3 class="failer-title">My Failers Of The Previous Year</h3>
                     <p class="failer-description">Last year, I had acheived some important soft skills based on my extra- curriculam activities.In various occation I tried to gather or acquired knowledge from different sources.Some of them are given below</p>
@@ -69,24 +69,24 @@
             <h3 class="new-year-plan">My New Year Plans</h3>
             <div class="my-plans-container">
                 <div class="skills">
-                    <img src="/images/icons/web.png" alt="" class="img-1">
+                    <img src="./images/icons/web.png" alt="" class="img-1">
                     <h3 class="my-plans-title">Web Development</h3>
                     <p class="skill-comment">I want to start</p>
                 </div>
 
                 <div class="skills">
-                    <img src="/images/icons/js.png" alt="" class="img-1">
+                    <img src="./images/icons/js.png" alt="" class="img-1">
                     <h3 class="my-plans-title">JabaScript</h3>
                     <p class="skill-comment">I want to start</p>
                 </div>
 
                 <div class="skills">
-                    <img src="/images/icons/smoke.png" alt="" class="img-1">
+                    <img src="./images/icons/smoke.png" alt="" class="img-1">
                     <h3 class="my-plans-title">Smoking Habits</h3>
                     <p class="skill-comment"> I want to get rid off.</p>
                 </div>
                 <div class="skills">
-                    <img src="/images/icons/ecom.png" alt="" class="img-1">
+                    <img src="./images/icons/ecom.png" alt="" class="img-1">
                     <h3 class="my-plans-title">E-Commerce</h3>
                     <p class="skill-comment">I want to develop</p>
                 </div>
@@ -95,8 +95,8 @@
 
         <!-- mindset section -->
 
-        <section class="mindset-container">
-            <div>
+        <section>
+            <div class="mindset-container">
                 <div class="mindset">
                     <h3 class="mindset-title">Always keep a positive mindset.</h3>
                     <button class="button-2">Call Now</button>
@@ -112,9 +112,9 @@
                 <h3 class="contact-title">Future</h3>
                 <p class="contact-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta sit aliquam aperiam alias praesentium laborum minus tenetur nulla blanditiis sint!</p>
                 <div class="image">
-                    <img src="/images/icons/fb.png" alt="">
-                    <img src="/images/icons/twitter.png" alt="">
-                    <img src="/images/icons/youtube.png" alt="">
+                    <img src="./images/icons/fb.png" alt="">
+                    <img src="./images/icons/twitter.png" alt="">
+                    <img src="./images/icons/youtube.png" alt="">
                 </div>
             </div>
             <div class="subscribe">
